-----2.7-----
New features:
	* Allow to move objects (drag&drop) to different folders in the project explorer
	* If a column values were calculated via a formula, update the values on data changes in the dependent variable columns
	* [spreadsheet] allow to insert multiple rows and columns in one step

UX improvements:
	* in the "Import Data" dialog show the history of the recently imported files
	* Improved the selection of curves in the plot that are near to or behind each other
	* BUG 408529 - Allow to use DEL to delete cells in spreadsheet and matrix
	* BUG 408537 - Allow to insert multiple rows and columns in the spreadsheet in one step

Performance:
	* Increased the plotting speed for curves with many data points by removing points which are shown on the same pixel in the scene

Bug fixes:
	* Disable autoscale when zooming, otherwise wrong (= auto scaled) data region is shown after project save&open
	* [macOS] fix determining number of lines of data files
	* Bug 408530 - correctly show error bars for data source columns having NANs
	* Bug 407847 - fixed the broken project import
	* [data fitting] handle weighted fitting with zero errors correctly
	* [data fitting] allow weighted fitting with data source from curve
	* [data fitting] fix function for calculating bounded values
	* [nsl] fix memory leak in line simplification (Douglas Peuker variant)
	* [nsl] fix bug in calculating Bessel polynomials on Windows (used in Bessel filter)

-----2.6-----
New features:
	* Histogram
	* Import from MQTT sources
	* Import of ROOT (CERN) TH1 histograms
	* Import of Ngspice raw files (ASCII and binary)
	* Import of data in JSON format (JSON arrays and objects)
	* Improved import of NetCDF files
	* Added file type specific summary and content for special file types in info box of import dialog
	* Convolution/Deconvolution of data sets (sampling interval, linear/circular, normalization, wrap, standard kernel)